# beanbag-docutils

./: .gitignore  .readthedocs.yml  .reviewboardrc  AUTHORS  COPYING  README.rst  conftest.py  dev-requirements.txt  pyproject.toml  setup.py  tox.ini
beanbag_docutils/: __init__.py
beanbag_docutils/sphinx/ext/: autodoc_utils.py  collect_files.py  django_utils.py  extlinks.py  github.py  http_role.py  image_srcsets.py  intersphinx_utils.py  json_writer.py  metadata.py  ref_utils.py  retina_images.py
beanbag_docutils/sphinx/ext/tests/: test_autodoc_utils.py  test_django_utils.py  test_extlinks.py  test_github.py  test_http_role.py  test_image_srcsets.py  test_json_writer.py  test_metadata.py  test_ref_utils.py  testcase.py
beanbag_docutils/sphinx/ext/tests/testdata/: github_linkcode_module.py
docs/: Makefile  conf.py  index.rst
docs/coderef/: index.rst
docs/releasenotes/: 1.0.rst  1.1.rst  1.2.rst  1.3.rst  1.4.1.rst  1.4.rst  1.5.rst  1.6.rst  1.7.1.rst  1.7.rst  1.8.1.rst  1.8.rst  1.9.rst  2.0.rst  2.1.1.rst  2.1.rst  2.2.rst  2.3.rst  2.4.rst  index.rst
tests/: runtests.py
